<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hina.a2048.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButtonParameters"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_settings"
                android:layout_margin="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTitle"
                android:textSize="100dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name_subtitle"
                android:textColor="@color/colorMain"
                android:textSize="25dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="75dp"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/buttonNewGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newGame"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorMain"/>


                <Button
                    android:id="@+id/buttonHowToPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/howToPlay"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorMain"/>


                <Button
                    android:id="@+id/buttonCollection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collection"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorMain"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <ImageView
                android:layout_width="260dp"
                android:layout_height="53dp"
                android:src="@drawable/logo_univ"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
