<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hina.a2048.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:background="@color/colorBackground"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/textViewScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:background="@color/colorBackground"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/textViewBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorMain"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="4"
                android:background="@color/colorBackground"
                android:padding="5dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="70dp">

                <ImageView
                    android:id="@+id/imageView00"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/imageView01"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/imageView02"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/imageView03"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView32"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/imageView33"
                    android:layout_row="3"
                    android:layout_column="3"
                    android:background="@drawable/basic"
                    android:minWidth="70dp"
                    android:minHeight="70dp"
                    android:layout_margin="5dp"/>

            </GridLayout>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>

